feat: add `attendance` endpoint impl
