# docs/swagger.yaml
@@ -135,6 +135,46 @@ paths:
       summary: Create a new attendance period
       tags:
       - Attendance Period
+  /attendance:
+    post:
+      consumes:
+      - application/json
+      description: Only admin can create an attendance by providing user id, date,
+        ip address and created by
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Create a new attendance
+      tags:
+      - Attendance
   /auth/login:
     post:
       consumes:
